# astra_test

./: CMakeLists.txt  README.md  localserver.cpp  localserver.h  main.cpp  textedit  textedit.cpp  textedit.h  textedit.json  textedit.pro
debian/: changelog  control  copyright  files  textedit.substvars
debian/patches/: 1
debian/textedit/DEBIAN/: control  md5sums
src/: localserver.cpp  localserver.h  main.cpp  serialization.cpp  serialization.h  textedit.cpp  textedit.h
